# keypeek-applet

./:  io.github.l-const.keypeek.json   io.github.lconst.keypeek.json  Cargo.toml  LICENSE  README.md  cargo-sources.json  justfile
.github/: FUNDING.yml
.github/workflows/: rust.yml
i18n/en/: shortcuts_applet.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  i18n.rs  main.rs  shortcuts.rs  utils.rs
