[package]
name = "keypeek-applet"
version = "0.1.11"
edition = "2024"
license = "MIT"
description = "A shortcuts viewer applet"
repository = "https://github.com/l-const/keypeek-applet"

[dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic", package = "cosmic-config", version = "1.0.0" }
cosmic-settings-config = { git = "https://github.com/pop-os/cosmic-settings-daemon", package = "cosmic-settings-config", rev = "ef024bfd06bf9fbd57246a25c91d1fdd28153d05" }

xkbcommon = "0.8"
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.8"
anyhow = "1.0.100"
notify = "8.2.0"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]
